kexts and OC update for 11.1
OC            0.6.4
Lilu          1.5.0
AppleALC      1.5.5
WhateverGreen 1.4.5

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -435,7 +435,7 @@
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
-				<string>en-US:0</string>
+				<data>ZW4tVVM6MA==</data>
 			</dict>
 		</dict>
 		<key>Delete</key>
@@ -553,7 +553,7 @@
 			<key>MinimumVolume</key>
 			<integer>20</integer>
 			<key>PlayChime</key>
-			<false/>
+			<string>Disabled</string>
 			<key>VolumeAmplifier</key>
 			<integer>0</integer>
 		</dict>
